# hic2cool

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  delete.cool  delete_100000.cool  delete_25000.cool  delete_50000.cool  delete_me.mcool  hic2cool.py  hic2cool_extractnorms.py  hic2cool_nezar.py  pyproject.toml  remove.cool  requirements.txt  run_hic2cool.py  setup.py  temp.cool  test.py  test2_out.multi.cool  test3_out.cool
hic2cool/: __init__.py  __main__.py  _version.py  hic2cool.py  hic2cool_config.py  hic2cool_updates.py  hic2cool_utils.py  run_hic2cool.py
hic2cool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test.py
test/test_data/: test_cool_100000.cool  test_cool_1000000.cool  test_cool_250000.cool  test_cool_2500000.cool  test_cool_multi_res.cool  test_hic_miss_norms.hic
test_data/: hic2cool_0.7.0_multi_res.mcool  new_version_single_res.cool  old_version_single_res.cool  test_cool_100000.cool  test_cool_2500000.cool  test_cool_no_norms.multi.cool
